--- a/index.html
+++ b/index.html
@@ -3,46 +3,72 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>街区地图</title>
-    <!-- 加载自定义样式 -->
-    <link rel="stylesheet" href="css/style.css">    
+    <title>城市地图</title>
+
+    <!-- 加载样式表 -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- 百度搜索窗口样式 -->
+    <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.css" />
 </head>
-<body>
-    <div id="errorMessage" data-bind="visible: !hasData(), text: errorMessage"></div>
-    <main class="container" data-bind="visible: hasData()">
-        <button id="show-menu" data-bind="click: toggleMenu" alt="show/hide menu">
-            <span data-bind="visible: !isShowMenu()">显示</span>
-            <span data-bind="visible: isShowMenu()">隐藏</span>
-        </button>
-        <div id="menu" data-bind="style: { left: isShowMenu()? '15px': '-315px'}">
-            <div id="header">
-                <h3 data-bind="text: header" class="city"></h3>
-                <div id="content" data-bind="text: title">
-                    <!-- What is your choice: <select data-bind="options: list, value: selector"></select> -->
-                </div>            
-                <div style="clear: both;"></div>
-                <p class="filter">
-                    Search: <input data-bind="textInput: q" placeholder="input keyword">
-                    <button data-bind="click: clearQueryInput">back</button>
-                </p>
+<body>    
+    <main>
+        <button id="show-menu" data-bind=" click: toggleMenu, text: isShowMenu()? '隐藏': '显示'" ></button>
+        <div id="menu" data-bind="visible: isShowMenu()">
+            <div class="head">
+                <h3 class="title">
+                </h3>
+                <div class="selector">
+                    <select data-bind="options: params, value: selectParam, event: { change: choose }"></select>                    
+                    <select data-bind="options: cities, value: selectCity, event: { change: choose }"></select>
+                </div>
+                <button data-bind="click: toggleWeather">天气</button>
+                <div data-bind="visible: isShowWeather(), with: weather" class="weather-box">
+                    <div class="triangle-left"></div>
+                    <div data-bind="with: now">
+                        <p>天气：<em data-bind="text: text"></em></p>
+                        <p>温度：<em data-bind="text: temperature"></em></p>
+                    </div>                    
+                </div>
             </div>
-            <ul data-bind="visible: toggle(), foreach: list" class="list">
-                <li class="list-item" data-bind="text: $data.getTitle(),click: $parent.clickItem, event: { mouseover: $parent.mouseoverItem, mouseout: $parent.mouseoutItem }"></li>
-                <!-- <li data-bind="text: $data.getTitle()"></li> -->
-            </ul>
-            <div id="currentItem" data-bind="visible: !toggle(), text: currentItem"></div>
+            <div class="weatherInfo" data-bind="visible: true, with: weather">                
+            </div>
+            <div class="filter">
+                <input type="text" placeholder="input keywords" data-bind="textInput: keywordsString">
+                <button data-bind="click: back">back</button>
+            </div>
+            <div class="list-box" data-bind="visible: isShowListBox()">
+                <ul class="list" data-bind="visible: results(), foreach: currentResults">
+                    <li class="list-item" data-bind="with: $data, 
+                                                     click: $parent.listClick, 
+                                                     event: { mouseover: $parent.mouseoverItem,
+                                                              mouseout: $parent.mouseoutItem }">
+                        <span data-bind="text: name" class="name"></span>
+                        <span data-bind="text: address" class="address"></span>
+                    </li>
+                </ul>
+                <button data-bind="text: getMoreButtonText, click: getDataFromBMap"></button>
+            </div>
+            <div data-bind="visible: !isShowListBox(), with: currentItem" class="detail">
+                <span data-bind="text: name" class="name"></span>
+                <span data-bind="text: address" class="address"></span>
+            </div>
         </div>
         <div id="map"></div>
     </main>
-    <!-- 加载百度地图 API -->
-    <script src="http://api.map.baidu.com/api?v=2.0&ak=ED5ebc91fe41f85878c57e54f68b6fae"></script> 
-    <!-- 加载检索信息窗口及样式文件 -->
-    <script src="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.js"></script>    
-    <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.css" />
+
+    <!-- 加载js文件 -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <!-- 加载百度地图 API -->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ED5ebc91fe41f85878c57e54f68b6fae"></script>
+    <!-- 加载检索信息窗口 -->
+    <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.js"></script>
+    
     <!-- Include knockout.js -->
     <script src="js/knockout-3.4.2.js"></script>
-    <script src="js/app.js"></script>
+
+    <script type="text/javascript" src="js/app.js"></script>
+
 </body>
 </html>
+
